# llama-distributed

./: .bazelrc  .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  CMakeLists.txt  DOCUMENTATION.md  MODULE.bazel  ONBOARDING.md  README.md  atlas.hcl  buf.gen.yaml  distpool.sqlite  distpool.sqlite-shm  distpool.sqlite-wal  docker-compose.yml  fly.toml
.github/workflows/: build-and-publish.yml  pages.yml  release.yml
audit/: auth.md  static.md  wire.md
audit/fuzz/: crash-1d95f60054879e418f153df031d3a87b9fef0f2a  fuzz_natpmp_resp  fuzz_natpmp_resp.cc  fuzz_tensor_recv  fuzz_tensor_recv.cc  fuzz_vm_tensor_write  fuzz_vm_tensor_write.cc
audit/raw/: banned-api.txt  buildifier.txt  clang-tidy-stderr.txt  clang-tidy.txt  cover-dist-turn.txt  cover-server.txt  cover-surd.txt  cppcheck.txt  errcheck-dist-turn.txt  errcheck-server.txt  errcheck-surd.txt  gitleaks.txt  godeps-dist-turn.txt  godeps-server.txt  godeps-surd.txt  gosec-dist-turn.txt  gosec-server.txt  gosec-surd.txt  govulncheck-dist-turn.txt  govulncheck-server.txt  govulncheck-surd.txt  race-dist-turn.txt  race-server.txt  race-surd.txt  staticcheck-server.txt
cmake/: FindLlamaCpp.cmake
cmd/dist-turn/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go
cmd/gpunet/: BUILD.bazel  go.mod  main.go  main_test.go
cmd/gpunet-turn/: BUILD.bazel  go.mod  go.sum  main.go
cmd/surd/: BUILD.bazel  go.mod  main.go  main_test.go
deploy/: README.md  docker-compose.envoy.yaml
deploy/coturn/: README.md  coturn.conf  docker-compose.coturn.yaml
deploy/envoy/: envoy.yaml
deploy/otel/: collector.yaml
deploy/sign/: BUILD.bazel  README.md  cosign-sign.sh  cosign-verify.sh  github-actions-sign.yaml
docs/: ARCHITECTURE_PROD.md  CF12-W6a-design.md  FLOW.md
include/: actv_p2p.h  auth.h  cluster_monitor.h  comfy_adapter.h  coordinator.h  dashboard_server.h  diffusion_pp_adapter.h  dist_conn.h  dist_protocol.h  dist_queue.h  dist_ws_client.h  fp8.h  gpu_lock.h  nat_pmp.h  node_agent.h  pipeline.h  platform_compat.h  pp_engine.h  runtime_adapter.h  sdcpp_roles.h  sdcpp_split_wire.h  sdt_codec.h  sglang_adapter.h  shard_download.h  topology.h  trtllm_adapter.h  vllm_adapter.h  vm_collective.h  vm_context.h  vm_coordinator.h  vm_fault.h  vm_node.h  vm_protocol.h  vm_scheduler.h  vm_tensor_registry.h
infra/azure/: README.md  deploy.sh
patches/: partial-layer-load.patch  sdcpp-block-split.patch
proto/distpool/ctrl/v1/: ctrl.proto
python/dpp_runtime/: __init__.py  __main__.py  backbones.py  sdt_codec.py  test_backbones.py  test_progress.py  test_sdcpp_2rig.py  test_sdcpp_daemon.py  test_sdcpp_role_chain.py  test_sdcpp_unet_split.py  test_sdcpp_wire.py  test_sdt_codec.py  test_unet_payload.py  unet_payload.py  validate_nway_split.py  validate_remote_denoise.py  wire.py  worker.py
scripts/: build.sh  install-agent.sh  start-single.sh
scripts/install/: build.ps1  install.ps1  install.sh  linux-install.sh  macos-install.sh  setup.sh  windows-install.ps1
scripts/package/: INSTALL.md
server/: .dockerignore  .env.example  BUGS_FOUND.md  BUILD.bazel  Dockerfile  activation.go  adversarial_auth_test.go  agent_identity.go  agent_identity_test.go  agent_key.go  agent_key_test.go  analytics_sink.go  analytics_sink_test.go  batching_test.go  breakage_test.go  chat_augment.go  chat_augment_test.go  chat_tools.go  chat_tools_test.go  comfy.go  comfy_meta.go  comfy_meta_test.go  comfy_pipeline_test.go  comfy_url_v2_test.go  conv_memory.go  conv_memory_test.go  cookies_test.go  corruption_test.go  cost_cache.go  cost_cache_test.go  cost_planner.go  cost_planner_test.go  counter_store.go  counter_store_test.go  dashboard_api.go  db.go  ddos_test.go  device_code.go  dialect.go  dialect_test.go  (+119 more)
server/assets/: README.md  auth.html  build.sh  console.html  device.html  home.html  install.html  install.ps1  install.sh  join.html  nexus.html  observatory.html  playground.html  pool.html  setup.ps1  setup.zsh  studio.html
server/ctrlpb/: ctrl.pb.go
server/migrations/: 20260524000001_baseline.sql  20260524000002_oidc_users.sql  20260524000003_rig_spiffe.sql
site/: 404.html  about.html  community.html  index.html  robots.txt  sitemap.xml
site/assets/css/: base.css  docs.css  picker.css  tokens.css
site/assets/js/: arch-explorer.js  hero-network.js  installer.js  nav.js  primer.js  theme.js
site/blog/: index.html
site/blog/posts/: friction-removal.html  install-picker.html  why-llama-distributed.html
site/docs/: architecture.html  flow.html  index.html  install.html  protocol.html  quickstart.html  reference.html
skills/three-rig-bringup/: SKILL.md
skills/three-rig-bringup/jobs/: shakti-build-v2.sh  shakti-build-v3.sh  shakti-build-v4.sh  shakti-build-v6.sh
skills/three-rig-bringup/scripts/: run-dist-laptop.sh  run-dist-laptop2.sh
src/: actv_p2p.cpp  agent_identity.cpp  agent_identity.h  auth.cpp  cli_common.cpp  cli_common.h  cluster_monitor.cpp  comfy_adapter.cpp  coordinator.cpp  dashboard_html.h  dashboard_server.cpp  diffusion_pp_adapter.cpp  dist_cli_main.cpp  dist_cli_split.cpp  dist_cli_top.cpp  dist_client_main.cpp  dist_coordinator_main.cpp  dist_join_main.cpp  dist_node_main.cpp  dist_vm_coordinator_main.cpp  dist_vm_node_main.cpp  dist_ws_client.cpp  gpu_lock.cpp  nat_pingpong.cpp  nat_pmp.cpp  nat_portmap_main.cpp  node_agent.cpp  pipeline.cpp  pp_engine.cpp  runtime_adapter.cpp  sdcpp_roles.cpp  sdcpp_worker.cpp  sdt_codec.cpp  sglang_adapter.cpp  shard_download.cpp  test_sdcpp_split.cpp  topology.cpp  trtllm_adapter.cpp  vllm_adapter.cpp  vm_collective.cpp  (+6 more)
tools/: bazel_stamp.sh  oci.bzl
